--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,11 @@
 <p1>Lives Left: <%= @game.lives_left(@game.id) %> </p>
 
+  <p1><%= if @game.last_guess_result(@game.id)
+     @game.last_guess_result(@game.id)
+   end%></p>
+
   <%= form_for ([@game, Guess.new]),
-   html: {class: "nifty_form"} do |f| %>
+    html: {class: "nifty_form"} do |f| %>
    <%= f.hidden_field :game_id, :value => @game.id %>
     <%= f.text_field :number %>
     <%= f.submit "Guess!" %>
